syntax = "proto3";

package xxx;  // 随便写，不影响

option go_package = "./user";  // 生成代码，在该目录下展开

message UserInfoRequest {
    int64 user_id = 1;
}

message UserInfoResp {
    int64 user_id = 1;
    string username = 2;
    int64 gender = 3;
}

service User {
    rpc UserInfo(UserInfoRequest) returns (UserInfoResp);
}
